# SimpleBlogUsingDjangoAndTemplate

./: .gitignore  .pre-commit-config.yaml  README.md  env.examples  manage.py  pyproject.toml
config/: urls.py
config/settings/: base.py  local.py
webblog/blog/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
webblog/blog/migrations/: 0001_initial.py  0002_alter_blog_options_alter_blog_author_and_more.py  0003_blogcomment.py  0004_alter_blog_post_date_alter_blogcomment_comment_date.py  0005_alter_blog_author_alter_blog_description_and_more.py  0006_blog_cover.py  0007_blogtag_blog_tags.py
webblog/blog/tests/: test_forms.py  test_models.py  test_views.py
webblog/static/css/: bootstrap.min.css  user_registeration.css
webblog/static/js/blog/: index.js
webblog/templates/: base.html  header.html
webblog/templates/account/: account_verification_invalid_notice.html  email_confirm.html  login.html  logout.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  signup.html  verification_sent.html
webblog/templates/account/email/: base_message.txt  (+3 more)
webblog/templates/blog/: blog_add.html  blog_author_detail.html  blog_author_list.html  blog_confirm_delete.html  blog_detail.html  blog_list.html  blog_tag_detail.html  blog_tag_list.html  blog_update.html  blogcomment_form.html  blogs.html  home.html
webblog/templates/dashboard/: index.html
webblog/templates/headers/: add_blog_header.html  main_header.html
webblog/templates/home/: index.html
webblog/templates/snippets/: already_logged_in.html
webblog/templates/users/: settings.html
webblog/users/: adapter.py  admin.py  apps.py  forms.py  managers.py  models.py  tokens.py  urls.py  utils.py  views.py
webblog/users/migrations/: 0001_initial.py  0002_alter_myuser_is_active.py  0003_alter_myuser_is_active.py  0004_alter_myuser_is_active.py  0005_alter_myuser_bio_alter_myuser_date_of_birth_and_more.py  0006_alter_myuser_picture.py  0007_alter_myuser_options.py
webblog/users/tests/: test_forms.py  test_managers.py  test_models.py  test_views.py
(+2 files in other folders)
