[tool.poetry]
name = "WebBlog"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
autopep8 = "^1.6.0"
pylint = "^2.12.2"
Django = "^4.0"
django-environ = "^0.8.1"
dj-database-url = "^0.5.0"
psycopg2 = "^2.9.2"
Pillow = "^8.4.0"
django-allauth = "^0.47.0"
coverage = "^6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
