[tool.poetry]
name = "WebBlog"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
autopep8 = "^1.6.0"
Django = "4.2.10"
django-environ = "^0.8.1"
dj-database-url = "^0.5.0"
psycopg2 = "^2.9.2"
Pillow = "^10.2.0"
django-allauth = "^0.47.0"
coverage = "^6.2"
django-utils-six = "^2.0"
six = "^1.16.0"
avatar-generator = "^0.4.2"
django-summernote = "^0.8.20.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.13.2"
pylint = "^3.1.0"
pre-commit = "^3.7.0"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
combine_as_imports = true
include_trailing_comma = true
line_length = 88
multi_line_output = 3
skip = ["venv/"]
skip_glob = ["**/migrations/*.py"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
